# python-ai

./: README.md
ai/: README.md
ai/generic/: README.md
finance/: README.md
finance/yfinance/: README.md
generic/: README.md  class.py  file.py  main.py  pyproject.toml  structure.py
generic/examples/: error.py  file.py
hands-on-machine-learning-with-scikit-learn/: README.md
hands-on-machine-learning-with-scikit-learn/chapter-2/: README.md  download_the_data.py  main.py  pyproject.toml
hands-on-machine-learning-with-scikit-learn/chapter-3/: README.md  main.py  pyproject.toml
libraries/jupyter-notebook/: README.md  docs.md  first.ipynb
libraries/scikit-learn/: README.md  docs.md  main.py  pyproject.toml
llm/: README.md
mathematics-for-machine-learning/2-linear-algebra/: README.md
mathematics-for-machine-learning/8-when-models-meet-data/: README.md  binary-cross-entropy.py  empirical-risk.py  least-squares-demo.py  loss-function.py
mathematics-for-machine-learning/9/: README.md  pyproject.toml
mfml/8/: README.md  main.py  regression.py
mfml/8-when-models-meet-data/: pyproject.toml
network/: README.md
network/ccna/: README.md  main.py  pyproject.toml  vlan_list.csv
network/ccna/docs/: docs.md  index.md  plan.md
network/ccna/examples/: 00_osi_tcp_ip.py  ifconfig.py  osi-tcp-ip.py  ping_sweep.py  port-scan.py  routing.py  vlan_config_from_csv.py
network/mininet/: README.md
network/network-namespace/: Dockerfile  README.md  command.md  docs.md  main.py  step.md
security/basic/: README.md  pyproject.toml  sql-injection.py
(+44 files in other folders)
