[project]
name = "ccna"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dnspython>=2.8.0",
    "genie>=25.8",
    "ipaddress>=1.0.23",
    "netaddr>=1.3.0",
    "netmiko>=4.6.0",
    "nornir>=3.5.0",
    "pyats>=25.8",
    "pyshark>=0.6",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "scapy>=2.6.1",
]
